--- a/LRDraft.tex
+++ b/LRDraft.tex
@@ -486,7 +486,7 @@ that can be compactly rewritten by using the index-less notation:
 \subsubsection{Excitation operators}
 
 We introduce the explicit representation of the eigenvectors op $\optr{L}$:
-\be
+\be\lb{XYcoeffDef1}
 \sket{p\alpha}{E} \equiv \mat{X_E^{p\alpha} \\ Y_E^{p\alpha}} \;, \qq
 \sbra{p\alpha}{\tilde E} \equiv \mat{\tilde X_{E\,p\alpha} & \tilde Y_{E\,p\alpha}} \;,
 \ee
@@ -500,14 +500,14 @@ and on the basis of these elements we define the \emph{excitation operators}:
 \end{align}
 Excitation operators are the right and left eigenvectors of the Liouville superoperator, as directly follows from their
 definition. Indeed for $\op E$ we have:
-\begin{align}
+\begin{align}\lb{opEeigenvalueDef1}
 \Liouv \op E & = \sum_p \sint \dd \alpha \left(\trace{\decay{\alpha}{p} \Liouv \op E} \excite{p}{\alpha} + 
 \decay{\alpha}{p} \trace{ \excite{p}{\alpha} \Liouv \op E}  \right) = \nn \\
 &= \sum_p \sint  \dd \alpha \sbra{p\alpha}{\cdot} \sum_q \sint  \dd \beta \optr{L}^{p \alpha}_{q\beta} \sket{q\beta}{E} 
 = E \sum_p \sint \dd \alpha \sbra{p\alpha}{\cdot} \sket{p\alpha}{E} = E \, \op E \;,	
 \end{align}
 whereas the left action on $\op{\tilde E}$ provides:
-\begin{align}
+\begin{align}\lb{optildeEeigenvalueDef1}
  \op{\tilde E} \Liouv &=  \sum_p \sint \dd \alpha \left(
 \trace{\op{\tilde E}\Liouv\excite{p}{\alpha}}\decay{\alpha}{p} +  
 \trace{\op{\tilde E}\sop{\mathcal L}\decay{\alpha}{p}} \excite{p}{\alpha} \right) = 
@@ -525,7 +525,23 @@ The introduction of the excitation operators allows to provided a complete opera
 where the algebraic equivalence between the trace written in \eqref{RhopExcitationDef1} and the numerator of \eqref{RhopExcitationTransBasisDef2}
 can be easily proved.
 
+\subsubsection{Schroedinger-like equation for excitonic states}
 
+We introduce the excitonic states defined via the linear combination of the basis set orthogonal to $\dmnot$ with the
+coefficients that appears in \eqref{XYcoeffDef1}, that is:
+\begin{align}
+\ket{\phi^E_p} &\equiv \sint \dd \alpha X_{E}^{p \alpha} \ket{\psi(\alpha)} &
+\tbra{\phi^E_p} &\equiv \sint \dd \alpha {\tilde X_{E}^{p \alpha}} \bra{\psi(\alpha)} \;, \nn\\
+\bra{\chi^E_p} &\equiv \sint \dd \alpha  Y_{E}^{p \alpha} \bra{\psi(\alpha)} &
+\tket{\chi^E_p} &\equiv \sint \dd \alpha {\tilde Y}_{E}^{p\alpha} \ket{\psi(\alpha)} \;.
+\end{align}
+Thanks to these definitions we can express the excitation operators as follows:
+\be
+\op E = \sum_p \left( \ket{\phi^E_p}\bra{\psi_p} + \ket{\psi_p} \bra{\chi^E_p}\right)\;, \qq
+\op {\tilde E} = \sum_p \left( \ket{\psi_p} \tbra{\phi^E_p} + \tket{\chi^E_p}\bra{\psi_p} \right)\;.
+\ee
+The operator eigenvalue equations \eqref{opEeigenvalueDef1} and \eqref{optildeEeigenvalueDef1} can be translated in Schroedinger-like equations
+for the excitonic states. 
 
 
 
